hw06-jpa-hard: temporary